kubernetes-manifests/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: all-in-one-server
        image: jaegertracing/all-in-one:1.18
        imagePullPolicy: Always
        ports:
        - containerPort: 14250
        - containerPort: 16686
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
spec:
  type: ClusterIP
  selector:
    app: jaeger
  ports:
  - name: tracing
    port: 14250
    targetPort: 14250
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-external-service
spec:
  type: NodePort
  selector:
    app: jaeger
  ports:
  - protocol: TCP
    name: webui
    port: 16686
    targetPort: 16686
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jaeger-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: jaeger-external-service
          servicePort: 16686
