kubernetes-manifests/onliestore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlinestore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: onlinestore
  template:
    metadata:
      labels:
        app: onlinestore
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: onlinestore-server
        image: gcr.io/FIXME/onlinestore:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: onlinestore-external-service
spec:
  type: NodePort
  selector:
    app: onlinestore
  ports:
  - protocol: TCP
    name: webui
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: onlinestore-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: onlinestore-external-service
          servicePort: 8080
